--- a/src/hub.html
+++ b/src/hub.html
@@ -2,14 +2,12 @@
 <html>
 
 <head>
-    <!-- DO NOT REMOVE/EDIT THIS COMMENT - META_TAGS -->
-
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, shrink-to-fit=no, minimal-ui, viewport-fit=cover">
 
     <link rel="icon" sizes="16x16 24x24 32x32 48x48 64x64" href="/favicon.ico">
     <!-- Web-App Manifest (https://w3c.github.io/manifest/) -->
-    <link rel="manifest" href="/manifest.webmanifest">
+    <!-- <link rel="manifest" href="/manifest.webmanifest"> -->
     <!-- iOS (for "Add to Homescreen") -->
     <meta name="mobile-web-app-capable" content="yes">
     <title>Room | App by Company</title>
@@ -690,9 +688,6 @@
                         position="0 0.225 0"
                         class="video-snap-button"
                     ></a-entity>
-                    <a-entity mixin="rounded-twitter-text-action-button ui" is-remote-hover-target tags="singleActionButton: true; isHoverMenuChild: true;" tweet-media-button visibility-on-content-types="contentTypes: video/mp4; contentSubtype: video-camera; visible: true;" position="0 0.285 0.001">
-                        <a-entity text="value:tweet; textAlign:center;" text-raycast-hack position="0 0 0.02"></a-entity>
-                    </a-entity>
                     <a-entity class="video-time-label" text="value: 0; anchorX: center; textAlign: center; color: #aaa; fontSize: 0.04;" text-raycast-hack position="0 -0.24 0"></a-entity>
                     <a-entity class="video-volume-label" text="value: 0%; anchorX: center; textAlign: center; color: #ccc; letterSpacing: 0.1; fontSize: 0.06;" text-raycast-hack position="0.0 0.14 0"></a-entity>
                     <a-entity
@@ -781,9 +776,6 @@
 
             <template id="photo-hover-menu">
                 <a-entity class="ui interactable-ui hover-container" visible="false">
-                    <a-entity mixin="rounded-twitter-text-action-button ui" is-remote-hover-target tags="singleActionButton: true; isHoverMenuChild: true;" tweet-media-button position="0 0.285 0.001">
-                        <a-entity text="value:tweet; textAlign:center;" text-raycast-hack position="0 0 0.02"></a-entity>
-                    </a-entity>
                 </a-entity>
             </template>
 
@@ -849,25 +841,6 @@
                     transparent: false;
                     alphaTest: 0.1;
                     src: action-button"
-            ></a-mixin>
-
-            <a-mixin id="rounded-twitter-text-action-button"
-                text-button="
-                    textHoverColor: #fff;
-                    textColor: #fff;
-                    backgroundColor: #1da1f2;
-                    backgroundHoverColor: #2db1ff;
-                    "
-                slice9="
-                    width: 0.45;
-                    height: 0.2;
-                    left: 64;
-                    top: 64;
-                    right: 66;
-                    bottom: 66;
-                    transparent: false;
-                    alphaTest: 0.1;
-                    src: button"
             ></a-mixin>
         </a-assets>
 
